# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  gendiff2.py  pyproject.toml  setup.cfg
.github/workflows/: check.yml  run_tests.yml
gendiff/: __init__.py  builder.py  comparator.py  comparator2.py  differ.py  gendiff.py  generate_diff.py  parse.py  parser.py  reading.py  stylish.py
gendiff/formatters/: json_formatter.py  plain.py  stylish.py
gendiff/modules/: gendiff.py  parsing.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py  test_output.py  test_plain.py
tests/fixtures/: file1_nested.yml  file2_nested.yml  json.txt  nested1.yml  nested3.json  nested4.json  result_json2.txt
